--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -535,15 +535,9 @@ The distribution of $\wpd$ is expected to be similar for all harmonies under the
 
 ```
 
-(ref:plot-all-new3) $\wpd$ values for the four illustrative designs are presented here. As expected, the value of $\wpd$ under null design is the least (a), followed by (b, c and d). Moreover, the relative difference is interesting as c is closer to d than b, since the differences between x categories are up-weighed by design.
+(ref:plot-all-new3) $\wpd$ values for the four illustrative designs are presented here. As expected, the value of $\wpd$ under null design is the least (a), followed by (b, c and d). Moreover, the relative difference is interesting as c is closer to d than b, since the differences between x categories axre up-weighed by design.
 
-```{r plot-all-new3, fig.cap = "(ref:plot-all-new3)", dependson= "null4by2"}
-
-```
-
-\todo[inline]{Plot missing and plot-all-new3 code is not relevant.}
-
-Figure \ref{fig:plot-all-new3} presents the results of $\wpd$ from the illustrative designs in Section \ref{sec:computation-wpd}. The value of $\wpd$ under null design (a) is the least, followed by (b), (c) and (d). This aligns with the principle of $\wpd$, which is expected to have lowest value for null designs and highest for designs of the form $\Dfx$ (d). Moreover, note the relative differences in $\wpd$ values between (b) and (c). The value of the tuning parameter $\lambda$ is set to $0.67$, which has resulted in giving more emphasis to differences in x-axis categories. Again consider \ref{fig:onegran-new}(a) and \ref{fig:onegran-new}(b) with a $\wpd$ value of 20.5 and 145 respectively. This is because there is more gradual increase across hours of the day than months of the year. If order of the categories is not considered, they result in a $\wpd$ value of $97.8$ and $161$ respectively, which follows from the fact that if we consider difference between any hours of the day, the magnitude will be much larger than if we consider difference between consecutive categories. Similarly, \ref{fig:onegran-new}(a) and (b) have $\wpd$ values of  $110.79$ and $125.82$ respectively. The ranking implies that the distributional differences are more prominent for the second household, as is also seen from the bigger fluctuations in the $90^{th}$ percentile than the first household.
+Figure \ref{fig:null4by2} also presents the results of $\wpd$ from the illustrative designs in Section \ref{sec:computation-wpd}. The value of $\wpd$ under null design (a) is the least, followed by (b), (c) and (d). This aligns with the principle of $\wpd$, which is expected to have lowest value for null designs and highest for designs of the form $\Dfx$ (d). Moreover, note the relative differences in $\wpd$ values between (b) and (c). The value of the tuning parameter $\lambda$ is set to $0.67$, which has resulted in giving more emphasis to differences in x-axis categories. Again consider \ref{fig:onegran-new}(a) and \ref{fig:onegran-new}(b) with a $\wpd$ value of 20.5 and 145 respectively. This is because there is more gradual increase across hours of the day than months of the year. If order of the categories is not considered, they result in a $\wpd$ value of $97.8$ and $161$ respectively, which follows from the fact that if we consider difference between any hours of the day, the magnitude will be much larger than if we consider difference between consecutive categories. Similarly, \ref{fig:onegran-new}(a) and (b) have $\wpd$ values of  $110.79$ and $125.82$ respectively. The ranking implies that the distributional differences are more prominent for the second household, as is also seen from the bigger fluctuations in the $90^{th}$ percentile than the first household.
  
 
 <!-- ## Choosing a threshold -->
