--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -278,7 +278,7 @@ The intended aim of $\wpd$ is to capture differences in categories irrespective 
 
 ### Characterizing distributions {-}
 
-Multiple observations of $v$ correspond to the subset $v_{jk} = \{s: A(s) = j, B(s) = k\}$. The number of observations might vary widely across subsets due to the structure of the calendar, missing observations or uneven locations of events in the time domain. In this paper, quantiles of $\{v_{jk}\}$ are chosen as a way to characterize distributions for the category $(a_j, b_k)$, $\forall j\in \{1, 2, \dots, \nx\}, k\in \{1, 2, \dots, \nf\}$. We use percentiles with $p = {0.01, 0.02, \dots, 0.99}$ to reduce the computational burden in summarising distributions.
+Multiple observations of $v$ correspond to the subset $v_{jk} = \{s: A(s) = j, B(s) = k\}$. The number of observations might vary widely across subsets due to the structure of the calendar, missing observations or uneven locations of events in the time domain. In this paper, quantiles of $\{v_{jk}\}$ are chosen as a way to characterize distributions for the category $(a_j, b_k)$, $\forall j\in \{1, 2, \dots, \nx\}, k\in \{1, 2, \dots, \nf\}$. We use percentiles with $p = {0.01, 0.02, \dots, 0.99}$ to reduce the computational burden in summarizing distributions.
 
 <!-- The benefit of using a non-parametric estimator is that there are less rigid assumptions made about the nature of the underlying distribution of the data. Sample quantiles could be used for estimating population quantiles in a non-parametric setup. describes the many ways of defining sample quantiles and recommends the use of median-unbiased estimator because of _desirable properties of a quantile estimator and can be defined independently of the underlying distribution._. -->
 
@@ -643,9 +643,14 @@ ggplot() +
 
 # Application to residential smart meter dataset {#sec:application-wpd}
 
-The smart meter data set for eight households in Melbourne has been utilized to see the use of $\wpd$ proposed in the paper. The data has been cleaned to be a `tsibble` [@wang2020tsibble] containing half-hourly electricity consumption from Jul-2019 to Dec-2019 for each of the households, which is procured by them by downloading their data from the energy supplier/retailer.
-No behavioral pattern is likely to be discerned from the line graph of energy usage over the entire period, since the plot will have too many measurements squeezed in a linear representation. When we zoom into the linear representation of this series in Figure \ref{fig:dotplot-8} (b) for September, some patterns are visible in terms of peaks and troughs, but we do not know if they are regular or what is their period.
-Electricity demand, in general, has a daily and weekly periodic pattern. However, it is not apparent from this view if all of these households have those patterns and in case they have if they are significant enough. Also, it is not clear if any other periodic patterns are present in any household which might have been hidden with this view. We start the analysis by choosing few harmonies, ranking them for each of these households, compare households to get more insights into what these rankings imply. Furthermore, the ranking and selection of significant harmonies is validated by analyzing the distribution of energy usage across significant harmonies.
+The smart meter data set for eight households in Melbourne were procured by downloading the data from the energy supplier/retailer. The data has been cleaned to form a `tsibble` [@wang2020tsibble] containing half-hourly electricity consumption from July to December 2019 for each of the households, No behavioral pattern is likely to be discerned from the time plot of energy usage over the entire period, since the plot will have too many observations squeezed in a linear representation. When we zoom into the September 2019 data in Figure \ref{fig:dotplot-8}(b), some patterns are visible in terms of peaks and troughs, but we do not know if they are regular or what is their period.
+
+(ref:dotplot-8) An ensemble plot with a heatmap (a), line plot (b), parallel coordinate plot (c) to demonstrate energy behavior of the households in different ways. Panel (b) shows the raw demand series for September to highlight the repetitive patterns of energy demand. Panel (a) shows $\wpd$ values across harmonies where a darker color indicates a higher ranking harmony. A significant harmony is shown with an asterisk. For example, ids 7 and 8 have significant patterns across (*hod*, *dow*) and (*dow*, *hod*). Panel (c) is useful for comparing households across harmonies. For example, for the harmony (*dow*-*hod*), ids 1 and 7 have the least and highest $\wpd$ respectively.
+
+```{r dotplot-8, fig.cap = "(ref:dotplot-8)", fig.height = 7}
+```
+
+Electricity demand, in general, has daily, weekly and annual seasonal patterns. However, it is not apparent from this view if all households have those patterns, or how strong they are in each case. It is also not clear from this view if any other periodic patterns are present in any household. We start the analysis by choosing a few harmonies, and ranking them for each of these households. The ranking and selection of significant harmonies is validated by analyzing the distribution of energy usage across significant harmonies.
 
 <!-- if we are benefiting by moving from a linear to cyclic representation of time to . -->
 
@@ -655,20 +660,7 @@ Electricity demand, in general, has a daily and weekly periodic pattern. However
 
 ### Choosing cyclic granularities of interest and removing clashes {-}
 
-Let $v_{i, t}$ denote the electricity demand for $i^{th}$ household for time period $t$. The series $v_{i, t}$ is the linear granularity corresponding to half-hour since the interval of the tsibble is 30 minutes. We consider coarser linear granularities like hour, day, week and month from the commonly used Gregorian calendar. Considering $4$ linear granularities hour, day, week, month, the number of cyclic granularities is $N_C = (4 * 3/2) = 6$. We obtain cyclic granularities namely "hour_day", "hour_week", "hour_month", "day_ week", "day_month" and "week_month", read as "hour of the day", etc. Further, we add cyclic granularity day-type ("wknd wday") to capture weekend and weekday behavior. Thus, $7$ cyclic granularities are considered to be of interest. The set consisting of pairs of cyclic granularities ($C_{N_C}$) will have $7\times 6=42$ elements which could be analyzed for detecting possible periodicities. The set of possible harmonies $H_{N_C}$ from $C_{N_C}$ are chosen by removing clashes using procedures described in [@Gupta2021-hd]. Table \ref{tab:tab-rank-8} shows $14$ harmony pairs that belong to $H_{N_C}$.
-
- <!-- The paper also shows how the number of harmonies could be identified among by removing clashes. This section shows how we could refine the search further by only looking at significant harmonies. -->
-
-### Selecting and Ranking harmonies for all households {-}
-
-$\wpd_{i}$ is computed on $v_{i, t}$ for all harmony pairs $\in H_{N_C}$ and for each households $i \in \{1, 2, \dots, 8\}$. The harmony pairs are then arranged in descending order and highlighted with `***`, `**` and `*` corresponding to the $99^{th}$, $95^{th}$ and $90^{th}$ percentile threshold. Table \ref{tab:tab-rank-8} shows the rank of the harmonies for different households. The rankings are different for different households, which is a reflection of their varied behaviors. Most importantly, there are at most $3$ harmonies that are significant for any household. This is a huge reduction in the number of potential harmonies to explore closely, starting from $42$.
-
-### Detecting patterns not apparent from linear display {-}
-
-Figure \ref{fig:dotplot-8} helps to compare households through the heatmap (a) across harmony pairs with the cyclic granularity mapped to x-axis and facet being plotted on the x-axis and y-axis of the heatmap. Here *dom*, *dow*, *wdwnd* are abbreviations for day-of-month, day-of-week, weekday/weekend and so on. The colors represent the value of $\wpd$. Darker cells correspond to more significant harmony pairs. Also, the ones with `*` corresponds to the ones above $\wpdsub{threshold95}$.
-Few observations that emphasizes patterns not discernible through (b) includes - (1) id 7 and 8 have the same significant harmonies despite having very different total energy usage, (2) id 6 and 7 differ in the sense that for id 6, the difference in patterns only during weekday/weekends, whereas for id 7, all or few other days of the week are also important. This might be due to their flexible work routines or different day-off, (3) there are no significant periodic patterns for id 5 when we fix the threshold to $\wpdsub{threshold95}$. Note that the $\wpd$ values are computed over the entire range, but the linear display in (b) is zoomed only for September, with the major and minor x-axis corresponding to weeks and days respectively.
-
-<!-- Households id 2 and 3 are similar, in terms of linear display and heatmap, which implies that similar periodic behavior can stem from households with different demographics. -->
+Let $v_{i, t}$ denote the electricity demand for the $i^{th}$ household in time period $t$. The series $\{v_{i, 1},\dots,v_{i,T}\}$ is the linear granularity corresponding to half-hour since the interval of the tsibble is 30 minutes. We consider coarser linear granularities like hour, day, week and month from the commonly used Gregorian calendar. From the four linear granularities of hour, day, week, and month, we obtain $N_C = 4\times 3/2 = 6$ cyclic granularities:  "hour_day", "hour_week", "hour_month", "day_ week", "day_month" and "week_month". Further, we add cyclic granularity day-type ("wknd wday") to capture weekend and weekday behavior. Thus, seven cyclic granularities are considered to be of interest. The pairs of cyclic granularities ($C_{N_C}$) will have $7\times 6=42$ elements. The set of possible harmonies $H_{N_C}$ from $C_{N_C}$ are chosen by removing clashes using procedures described in [@Gupta2021-hd]. Table \ref{tab:tab-rank-8} shows $14$ harmony pairs that belong to $H_{N_C}$.
 
 ```{r rank-household-mclapply-8}
 ```
@@ -676,27 +668,43 @@ Few observations that emphasizes patterns not discernible through (b) includes -
 ```{r elec_select_harmony-8}
 ```
 
-(ref:dotplot-8) An ensemble plot with a heatmap (a), line plot (b), parallel coordinate plot (c) to demonstrate energy behavior of the households in different ways. (b) is the zoomed-in raw demand series for September to highlight the repetitive patterns of energy demand. (a) shows $\wpd$ values across harmonies with the x variable of harmony placed across x-axis and facet variable placed across y-axis. The darker the color in (a), the higher the harmony is ranked. Visualizing harmonies through (a) allows to view the significant cyclic granularities along the x-axis, facet or both for each household. For eg, ids 7 and 8 have significant patterns across (*hod*, *dow*) and (*dow*, *hod*), which was not apparent through (a). (c) is useful for comparing households across harmonies, for eg, for the harmony (*dow*-*hod*), ids 1 and 7 have the least and highest $\wpd$ respectively.
-
-```{r dotplot-8, fig.cap = "(ref:dotplot-8)", fig.height = 7}
+```{r tab-rank-8, dependson="dotplot-8"}
 ```
 
-```{r tab-rank-8}
-```
+ <!-- The paper also shows how the number of harmonies could be identified among by removing clashes. This section shows how we could refine the search further by only looking at significant harmonies. -->
+
+### Selecting and Ranking harmonies for all households {-}
+
+$\wpd_{i}$ is computed on $v_{i, t}$ for all harmony pairs $\in H_{N_C}$ and for each household $i \in \{1, 2, \dots, 8\}$. The harmony pairs are then arranged in descending order and highlighted with `***`, `**` and `*` corresponding to the $99^{th}$, $95^{th}$ and $90^{th}$ percentile threshold. Table \ref{tab:tab-rank-8} shows the rank of the harmonies for different households. The rankings are different for different households, which is a reflection of their varied behaviors. Most importantly, there are at most three harmonies that are significant for any household. This is a huge reduction in the number of potential harmonies to explore.
+
+### Detecting patterns not apparent from linear display {-}
+
+Figure \ref{fig:dotplot-8} helps to compare households through the heatmap (a) across harmony pairs. Here *dom*, *dow*, *wdwnd* are abbreviations for day-of-month, day-of-week, weekday/weekend and so on. The colors represent the value of $\wpd$. Darker cells correspond to higher values of $\wpd$. Those with `*` correspond to $\wpd$ values above $\wpdsub{threshold95}$.
+
+We can now see some patterns that were not discernible in Panel (b), including:
+
+  1. id 7 and 8 have the same significant harmonies despite having very different total energy usage.
+  2. id 6 and 7 differ in the sense that for id 6, the difference in patterns only during weekday/weekends, whereas for id 7, all or few other days of the week are also important. This might be due to their flexible work routines or different day-off.
+  3. There are no significant periodic patterns for id 5 when we fix the threshold to $\wpdsub{threshold95}$.
+
+Note that the $\wpd$ values are computed over the entire range, but the linear display in (b) is only for September, with the major and minor x-axis corresponding to weeks and days respectively.
+
+<!-- Households id 2 and 3 are similar, in terms of linear display and heatmap, which implies that similar periodic behavior can stem from households with different demographics. -->
+
 
 ### Comparing households and validating rank of harmonies {-}
 
-According to Figure \ref{fig:dotplot-8}(c), for the harmony pair (*dow*-*hod*), household id 7 has the greatest value of $\wpd$, while id 1 has the least. Also, from table \ref{tab:tab-rank-8} it could be seen that the harmony pair (*dow*, *hod*) is important for id 7, however it has been labeled as an inconsequential pair for id 1. The distribution of energy demand for both of these households, with *dow* as the facet and *hod* on the x-axis, may help explain the choice. Figure \ref{fig:gravitas-plot-8} demonstrates that for id 7, the median (black) and quartile deviation (orange) of energy consumption fluctuates throughout for most hours of the day and day of the week, while for id 1, daily patterns are consistent within weekdays and weekends. As a result, for id 1, it is more appropriate to examine the distributional difference solely across (*dow*, *wdwnd*), which has been rated higher in Table \ref{tab:tab-rank-8}.
+According to Figure \ref{fig:dotplot-8}(c), for the harmony pair (*dow*-*hod*), household id 7 has the greatest value of $\wpd$, while id 1 has the least. From Table \ref{tab:tab-rank-8} it can be seen that the harmony pair (*dow*, *hod*) is important for id 7, however it has been labeled as an inconsequential pair for id 1. The distribution of energy demand for both of these households, with *dow* as the facet and *hod* on the x-axis, may help explain the choice. Figure \ref{fig:gravitas-plot-8} demonstrates that for id 7, the median (black) and quartile deviation (orange) of energy consumption fluctuates for most hours of the day and days of the week, while for id 1, daily patterns are more consistent within weekdays and weekends. As a result, for id 1, it is more appropriate to examine the distributional difference solely across (*dow*, *wdwnd*), which has been rated higher in Table \ref{tab:tab-rank-8}.
 
 <!-- Although the differences might seem significant at first, with closer inspection it could be seen that the scale of the demand is lower in this case and hence the differences are not large enough to cross the threshold for significance. -->
 
 <!-- Figure \ref{fig:gravitas-plot-8} is used to show -->
 <!-- if this selection and ranking of harmony pairs makes sense for this household. Panel a) of Figure \ref{fig:gravitas-plot-8} shows the distribution of energy demand with weekday/weekend as the x-axis and hour-of-day as the facets and helps to compare the weekend/weekday patterns for different hours of the day. It could be observed that the difference between weekend and weekday is the highest from 15 to 19 hours of the day. Panel b) shows the distribution of energy demand with the variables swapped and helps to compare the daily patterns within weekday and weekend. It could be observed that the daily pattern is similar for weekdays and weekends with a morning and evening peak. However, the difference between morning and evening peaks are higher for weekends. Since $\wpd$ is designed to put more weightage on within-facet differences for $\lambda>0.5$, it makes sense that the pair (hod, wdwnd) has been ranked higher than (wdwnd, hod). Panel c) shows the distribution of energy demand with weekday/weekend as the x-axis and week-of-month as the facets. Although the differences might seem significant at first, with closer inspection it could be seen that the scale of the demand is lower in this case and hence the differences are not large enough to cross the threshold for significance. -->
 
-(ref:gravitas-plot-8) Comparing distribution of energy demand shown for household id 1 (a) and 7 (b) across *hod* in x-axis and *dow* in facets through quantile area plots. The value of $\wpd$ in Table 3 suggests that the harmony pair (*dow*, *hod*) is significant for household id 7, but not for 1. This implies that distributional differences are captured more by this harmony for id 7, which is apparent from this display with more fluctuations across median and 75th percentile for different hours of the day and day of week. For id 1, patterns look similar within weekdays and weekends. Here, the median is represented by the black line, the orange area corresponds to quartile deviation and the green area corresponds to area between $10^{th}$ and $90^{th}$ quantile.
+(ref:gravitas-plot-8) Comparing distribution of energy demand shown for household id 1 (a) and 7 (b) across *hod* in x-axis and *dow* in facets through quantile area plots. The value of $\wpd$ in Table 3 suggests that the harmony pair (*dow*, *hod*) is significant for household id 7, but not for id 1. This implies that distributional differences are captured more by this harmony for id 7, which is apparent from this display with more fluctuations across median and 75th percentile for different hours of the day and day of week. For id 1, patterns look similar within weekdays and weekends. Here, the median is represented by the black line, the orange area corresponds to quartile deviation and the green area corresponds to area between $10^{th}$ and $90^{th}$ quantile.
 
 
-```{r gravitas-plot-8, message = FALSE, warning=FALSE,fig.cap="(ref:gravitas-plot-8)"}
+```{r gravitas-plot-8, message = FALSE, warning=FALSE,fig.cap="(ref:gravitas-plot-8)", fig.pos="!htb"}
 
 ```
 
@@ -704,7 +712,7 @@ According to Figure \ref{fig:dotplot-8}(c), for the harmony pair (*dow*-*hod*), 
 
 # Discussion
 
-Exploratory data analysis involves many iterations of finding and summarizing patterns. With temporal data available at finer scales, exploring time series has become overwhelming with so many possible granularities to explore. A common solution is to aggregate and look at the patterns across usual granularities like hour-of-day or day-of-week, but there is no way to know the “interesting” granularities a priori. A huge number of displays need to be analyzed or we might end up missing informative granularities. This work refines the search of informative granularities by identifying those for which the differences between the displayed distributions are greatest and rating them in order of importance of capturing maximum variation.
+Exploratory data analysis involves many iterations of finding and summarizing patterns. With temporal data available at finer scales, exploring time series has become overwhelming with so many possible granularities to explore. A common solution is to aggregate and look at the patterns across the usual granularities such as hour-of-day or day-of-week, but there is no way to know the “interesting” granularities a priori. A huge number of displays need to be analyzed or we might end up missing informative granularities. This work refines the search of informative granularities by identifying those for which the differences between the displayed distributions are greatest and rating them in order of importance of capturing maximum variation.
 
 The significant granularities across different datasets (individuals/subjects) do not imply similar patterns across different datasets. They simply mean that maximum distributional differences are being captured across those granularities. A future direction of work is to be able to explore and compare many individuals/subjects together for similar patterns across significant granularities.
 
