--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -1,98 +1,25 @@
----
-title: Detecting distributional differences between temporal granularities for exploratory time series analysis 
-
-# to produce blinded version set to 1
-blinded: 0
-
-authors:
-- name: Sayani Gupta
-  thanks: "Email: Sayani.Gupta@monash.edu"
-  affiliation: Department of Econometrics and Business Statistics, Monash University, Australia
-
-- name: Rob J Hyndman
-  affiliation: Department of Econometrics and Business Statistics, Monash University, Australia
-
-- name: Dianne Cook
-  affiliation: Department of Econometrics and Business Statistics, Monash University, Australia
-keywords:
-- data visualization
-- cyclic granularities
-- periodicities
-- permutation tests
-- distributional difference
-- Jensen-Shannon distances
-- smart meter data
-- R
-
-abstract: |
- Cyclic temporal granularities are temporal deconstructions of a time period into units such as hour-of-the-day and work-day/weekend. They can be useful for measuring repetitive patterns in large univariate time series data, and feed new approaches to exploring time series data. One use is to take pairs of granularities, and make plots of response values across the categories induced by the temporal deconstruction. However, when there are many granularities that can be constructed for a time period, there will also be too many possible displays to decide which might be the more interesting to display. This work proposes a new distance metric to screen and rank the possible granularities, and hence choose the most interesting ones to plot. The distance measure is computed for a single or pairs of cyclic granularities and can be compared across different cyclic granularities or on a collection of time series. The methods are implemented in the open-source R package `hakear`.
-
-bibliography: [bibliography.bib]
-preamble: >
- \setlength {\marginparwidth }{2cm}
- \usepackage{mathtools,amssymb,booktabs,amsthm,todonotes,colortbl}
- \def\mod{~\text{mod}~}
- \usepackage{mathptmx}
- \usepackage{caption,setspace}
- \usepackage{longtable}
- \DeclareCaptionStyle{italic}{labelfont={bf},textfont={it},labelsep=colon}
- \captionsetup[figure]{style=italic,format=hang,singlelinecheck=true,font={stretch=1.2}}
- \captionsetup[table]{style=italic,format=hang,singlelinecheck=true,font={stretch=1.2}}
- \def\novspacing{\setlength{\aboverulesep}{0pt}\setlength{\belowrulesep}{0pt}}
- \def\vspacing{\setlength{\aboverulesep}{0.4ex}\setlength{\belowrulesep}{0.65ex}}
- \newcommand{\DC}[1]{\textcolor{red}{#1}}
- \setcounter{topnumber}{2}
- \setcounter{bottomnumber}{2}
- \setcounter{totalnumber}{4}
- \renewcommand{\topfraction}{0.85}
- \renewcommand{\bottomfraction}{0.85}
- \renewcommand{\textfraction}{0.15}
- \renewcommand{\floatpagefraction}{0.7}
- \def\wpd{\text{\textit{wpd}}}
- \def\wpdsub#1{\text{\textit{wpd}}_{\text{#1}}}
- \def\Dnull{D_{\emptyset}}
- \def\Df{D_{\!f}}
- \def\Dfx{D_{\!fx}}
- \def\Dx{D_{x}}
- \def\nsub#1{n_{\text{#1}}}
- \def\nx{n_x}
- \def\nf{n_{\!f}}
-
-output:
- bookdown::pdf_book:
-  base_format: rticles::asa_article
-  fig_height: 5
-  fig_width: 8
-  fig_caption: yes
-  dev: "pdf"
-  keep_tex: yes
----
-
-```{r initial, echo = FALSE, cache = FALSE, include = FALSE}
-options("knitr.graphics.auto_pdf" = TRUE,
-    tinytex.verbose = FALSE)
+```{r setup, echo = FALSE, cache = FALSE, include = FALSE}
+options(
+  "knitr.graphics.auto_pdf" = TRUE,
+  tinytex.verbose = FALSE
+)
 library(knitr)
 opts_chunk$set(
- echo = FALSE, warning = FALSE, message = FALSE, comment = "#>",
- fig.path = "figure/", fig.align = "center", fig.show = "hold",
- cache = TRUE, cache.path = "cache/",
- out.width = ifelse(is_html_output(), "100%", "\\textwidth")
+  echo = FALSE,
+  warning = FALSE,
+  message = FALSE,
+  comment = "#>",
+  fig.path = "figure/",
+  fig.align = "center",
+  fig.show = "hold",
+  cache = TRUE,
+  cache.path = "cache/",
+  out.width = ifelse(is_html_output(), "100%", "\\textwidth"),
+  root.dir = here::here()
 )
-knitr::opts_knit$set(root.dir = here::here())
-#                           read_chunk('main.R')
-#knitr::read_chunk(here::here("paper/R/", "null_distribution.R"))
-#knitr::read_chunk(here::here("paper/R/", "mean_null.R"))
-#source(here::here("paper/R/sim_panel.R"))
-# Set up plan
-#source("_drake.R")
-# Run all code required
-#drake::r_make()
-# load each object as required
-# loadd()
-```
 
 ```{r external, include = FALSE, cache = FALSE}
-read_chunk("paper/scripts/main.R")
+read_chunk(here::here("paper/scripts/main.R"))
 ```
 
 ```{r load}
@@ -109,7 +36,7 @@ set.seed(3215)
 
 <!--Exploratory data analysis, as coined by John W. Tukey [@Tukey1977-jx] involves many iterations of finding structures and patterns that allow the data to be informative.-->
 
-Cyclic temporal granularities [@Bettini1998-ed, @Gupta2021-hd] are <!--theoretical--> temporal deconstructions that define cyclic repetitions in time, e.g. hour-of-day, day-of-month, or regularly scheduled public holidays. These granularities form ordered or unordered categorical variables. An example of an ordered granularity is day-of-week, where Tuesday is always followed by Wednesday, and so on. An unordered granularity example is \DC{week type in an academic semester: orientation, break, exam or regular classes}. We can use granularities to explore patterns in univariate time series by examining the distribution of the measured variable across different categories of the cyclic granularities.
+Cyclic temporal granularities [@Bettini1998-ed;@Gupta2021-hd] are <!--theoretical--> temporal deconstructions that define cyclic repetitions in time, e.g. hour-of-day, day-of-month, or regularly scheduled public holidays. These granularities form ordered or unordered categorical variables. An example of an ordered granularity is day-of-week, where Tuesday is always followed by Wednesday, and so on. An unordered granularity example is \DC{week type in an academic semester: orientation, break, exam or regular classes}. We can use granularities to explore patterns in univariate time series by examining the distribution of the measured variable across different categories of the cyclic granularities.
 
 ```{r calendar-elec, fig.height = 8, fig.cap = "Calendar displays faceted by two households are shown. The calendar displays are rich in information and has several components. For example, it can be observed easily that the level of energy consumption by household 2 is higher than household 4. Also, it gives an overview on when these households are away for holidays and which months consumptions are highest (Jan, Feb). However, when it comes to discerning periodic patterns, analyzing all possible periodic patterns through this display is overwhelming due to combination of linear and cyclic representation of time. For example, there is more going on in terms of peaks and troughs in id 2 compared to id 4, but it is not clear which all periodic patterns are dominant and if it differs between households."}
 
@@ -580,7 +507,7 @@ Figure \ref{fig:raw} shows that both the location and scale of the distributions
 
 (ref:raw) Distribution of $\wpdsub{raw}$ is plotted across different $\nx$ and $\nf$ categories under $\Dnull$ through density and rug plots. Both location (blue line) and scale (orange marks) of the distribution shifts for different panels. This is not desirable since under the null design, the distribution is not expected to capture any differences.
 
-```{r raw, fig.cap = "(ref:raw)", fig.pos="!b"}
+```{r raw, fig.cap = "(ref:raw)", fig.pos="!htb"}
 ```
 
 ```{r glm-tab}
@@ -720,7 +647,7 @@ The significant granularities across different datasets (individuals/subjects) d
 
 # Acknowledgments {-}
 
-The authors thank the ARC Centre of Excellence for Mathematical and Statistical Frontiers [(ACEMS)](https://acems.org.au/home) for supporting this research. Sayani Gupta was partially funded by [Data61 CSIRO](https://data61.csiro.au/) during her PhD. The Github repository, [github.com/Sayani07/paper-hakear](https://github.com/Sayani07/paper-gravitas), contains all materials required to reproduce this article and the code is also available online in the supplemental materials. This article was created with R [@R-language], `knitr` [@knitr2015, @R-knitr] and `rmarkdown` [@rmarkdown2018, @R-rmarkdown]. Graphics are produced with `ggplot2` [@Wickham2009pk].
+The authors thank the ARC Centre of Excellence for Mathematical and Statistical Frontiers [(ACEMS)](https://acems.org.au/home) for supporting this research. Sayani Gupta was partially funded by [Data61 CSIRO](https://data61.csiro.au/) during her PhD. The Github repository, [github.com/Sayani07/paper-hakear](https://github.com/Sayani07/paper-gravitas), contains all materials required to reproduce this article and the code is also available online in the supplemental materials. This article was created with R [@R-language], `knitr` [@knitr2015;@R-knitr] and `rmarkdown` [@rmarkdown2018;@R-rmarkdown]. Graphics are produced with `ggplot2` [@Wickham2009pk].
 
 # Supplementary Materials
 
@@ -731,8 +658,6 @@ The authors thank the ARC Centre of Excellence for Mathematical and Statistical 
 
 \noindent
 **R-package:** The open-source R package `hakear` is available on Github (https://github.com/Sayani07/hakear) to implement ideas presented in this paper.
-
-# Bibliography
 
 ```{r write-bib, eval = FALSE}
 write_bib(c("rmarkdown", "bookdown", "rticles", "knitr", "ggplot2", "dplyr", "tsibble", "gravitas", "ggpubr", "kableExtra", "magrittr", "readr", "lubridate", "renv", "archive", "hakear", "patchwork", "ggpubr"), file = "rpkgs.bib")
