--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1169,11 +1169,10 @@ Granularities},
    year     =  2002,
    language = "en"
  }
- 
 
  @ARTICLE{Menendez1997-in,
    title    = "The {Jensen-Shannon} divergence",
-   author   = "Men{\'e}ndez, M L and Pardo, J A and Pardo, L and Pardo, M C",
+   author   = "Men\'{e}ndez, M L and Pardo, J A and Pardo, L and Pardo, M C",
    abstract = "In this paper we investigate the Jensen-Shannon parametric
                divergence for testing goodness-of-fit for point estimation. Most
                of the work presented is an analytical study of the asymptotic
